# span

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  install-dev.sh  install.sh  uninstall.sh
.capy/: pr-body-31-unit-integration-ci.md  pr-body-timeouts.md
.github/workflows/: ci.yml  integration-tests.yml  release.yml  unit-tests.yml
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  heartbeat.rs  main.rs  wireguard.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/src/commands/: app.rs  bucket.rs  function.rs  init.rs  logs.rs  mod.rs  node.rs  route.rs  secret.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  events.rs  lib.rs  telemetry.rs
crates/control-plane/: Cargo.toml  config.example.toml
crates/control-plane/src/: config.rs  lib.rs  main.rs  state.rs
crates/control-plane/src/api/: cluster.rs  health.rs  mod.rs  nodes.rs  routes.rs
crates/control-plane/src/events/: logs.rs
crates/control-plane/src/grpc/: agent_service.rs
crates/control-plane/src/nodes/: drain.rs  mod.rs  remove.rs
crates/control-plane/src/scheduler/: mod.rs
crates/control-plane/tests/: e2e.rs  health.rs  nats_integration.rs  scheduler.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/models/: Cargo.toml
crates/models/migrations/: 001_init.sql  002_node_lifecycle.sql  003_wireguard.sql
crates/models/src/: lib.rs  route.rs  schema.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: agent.proto  common.proto
crates/proto/src/: lib.rs
dashboard/: README.md  package.json  server.js
deploy/: .env.example  docker-compose.yml
deploy/configs/: cluster.yaml.example  span-config.toml.example
deploy/dockerfiles/: Dockerfile.agent  Dockerfile.control-plane  Dockerfile.dashboard  Dockerfile.gateway
deploy/systemd/: span.service
docs/: wireguard-debug.md
examples/: app.yaml
scripts/: detect-arch.sh  setup-containerd.sh  setup-docker.sh
