[workspace]
resolver = "2"
members = [
    "crates/control-plane",
    "crates/agent",
    "crates/gateway",
    "crates/cli",
    "crates/proto",
    "crates/models",
    "crates/crypto",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KAJdev/span"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# gRPC
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
prost-types = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

# Crypto (for later)
chacha20poly1305 = "0.10"
age = "0.10"

# NATS
async-nats = "0.33"

# Testing
testcontainers = "0.15"
