[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "span-agent"
path = "src/main.rs"

[dependencies]
tracing.workspace = true
common = { path = "../common" }
tonic = { workspace = true }
prost-types.workspace = true
proto = { path = "../proto" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
dirs = "5"
sysinfo = { version = "0.30", features = ["network", "system"] }
tokio.workspace = true
hostname = "0.4"
