[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-nats.workspace = true
