[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "span-control-plane"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
async-nats.workspace = true
dirs.workspace = true
toml.workspace = true
futures-util = "0.3"
common = { path = "../common" }
models = { path = "../models" }
proto = { path = "../proto" }
crypto = { path = "../crypto" }
rcgen = "0.12"
x509-parser = "0.15"

[features]
default = ["grpc"]
grpc = []

[dev-dependencies]
serde_json.workspace = true
axum.workspace = true
hyper = "0.14"
tower.workspace = true
tokio-tungstenite = "0.21"
futures-util = "0.3"
testcontainers.workspace = true
reqwest = { version = "0.12", features = ["json"] }
